--- a/notebooks/02_interactive_airbnb.ipynb
+++ b/notebooks/02_interactive_airbnb.ipynb
@@ -1192,9 +1192,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "silent-acrylic",
+   "id": "0a801dbd-52f6-4eb9-a7a3-b863593fb1fb",
    "metadata": {},
-   "source": []
+   "source": [
+    "We can overlay the two with the `*` sign."
+   ]
   },
   {
    "cell_type": "code",
@@ -1652,7 +1654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
