--- a/notebooks/01_static_auctions.ipynb
+++ b/notebooks/01_static_auctions.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "hv.extension('bokeh', 'matplotlib')\n",
     "\n",
-    "pn.extension()\n",
+    "pn.extension(design='material')\n",
     "\n",
     "pd.options.display.max_columns = None\n",
     "pd.options.display.max_rows = None\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "id": "liked-chambers",
    "metadata": {},
    "outputs": [],
@@ -397,8 +397,6 @@
    "id": "floating-exercise",
    "metadata": {},
    "source": [
-    "![a_canva](https://cdn6.bigcommerce.com/s-lh4nxu/products/5295/images/40631/5_piece_huge_pictures_home_decor_abstract_multi_panel_art_vvvart__94297.1431150956.1280.1280.jpg?c=2)\n",
-    "\n",
     "As mentioned in section 04, panel is a tool to help us create apps and dashboards in pure Python that it also contains a JavaScript extention. You can think of panel as the canvas you will use to share your visualisations. It has been built on top of bokeh and the library param and provides the best of both worlds to its users.\n",
     "\n",
     "There are three main components in the library and these are a `pane`, a `widget`, and `panel`. A `pane` creates renderable objects from almost any data type, chart, or other object in Python and allows us to put it inside our application/dashboard. A widget gives interactivity to an object. Lastly, `panel`s are what will compose our dashboards and applications. Hence, they can contain `pane`s, a `widget`s, and other `panel`s.\n",
@@ -460,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "title_row = pn.Row('# This is our Test Title', background='blue')\n",
+    "title_row = pn.Row('# This is our Test Title', styles={'background': 'blue'})\n",
     "title_row"
    ]
   },
@@ -472,7 +470,7 @@
    "outputs": [],
    "source": [
     "bars_row = pn.Row(\"What's the Median Price/House Type?\", \"What's the Median Price/Car Spots?\",\n",
-    "                  \"What's the Median Price/Bathrooms?\", \"What's the Median Price/Rooms?\", background='white')\n",
+    "                  \"What's the Median Price/Bathrooms?\", \"What's the Median Price/Rooms?\", styles={'background': 'white'})\n",
     "bars_row"
    ]
   },
@@ -483,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bans_rows = pn.Row(\"Min Price\", \"25th Percentile\", \"Median Price\", \"75th Percentile\", \"Max Price\", background='cyan')\n",
+    "bans_rows = pn.Row(\"Min Price\", \"25th Percentile\", \"Median Price\", \"75th Percentile\", \"Max Price\", styles={\"background\": 'cyan'})\n",
     "bans_rows"
    ]
   },
@@ -494,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_map_row = pn.Row(\"What's the Avg Price/Suburb with 150+ Listings?\", \"What's Median House Price/Suburb?\", background='brown')\n",
+    "bar_map_row = pn.Row(\"What's the Avg Price/Suburb with 150+ Listings?\", \"What's Median House Price/Suburb?\", styles={\"background\": 'brown'})\n",
     "bar_map_row"
    ]
   },
@@ -505,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "the_column = pn.Column(title_row, bars_row, bans_rows, bar_map_row, background='gray'); the_column"
+    "the_column = pn.Column(title_row, bars_row, bans_rows, bar_map_row, styles={\"background\": 'gray'}); the_column"
    ]
   },
   {
@@ -1386,8 +1384,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header = pn.pane.Markdown(\"# Housing Auction Analysis in Melbourne, AU\", style={\"color\": \"#3b4252\"}, width=500, \n",
-    "                          sizing_mode=\"stretch_width\", margin=(10,5,10,15))\n",
+    "header = pn.pane.Markdown(\n",
+    "    \"# Housing Auction Analysis in Melbourne, AU\", styles={\"color\": \"#3b4252\"},\n",
+    "    width=500, sizing_mode=\"stretch_width\", margin=(10,5,10,15)\n",
+    ")\n",
     "header"
    ]
   },
@@ -1416,8 +1416,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = pn.pane.PNG(\"https://icons.iconarchive.com/icons/google/noto-emoji-travel-places/1024/42486-house-icon.png\", \n",
-    "                 height=50, sizing_mode=\"fixed\", align=\"center\")\n",
+    "p1 = pn.pane.PNG(\n",
+    "    \"https://icons.iconarchive.com/icons/google/noto-emoji-travel-places/1024/42486-house-icon.png\", \n",
+    "    height=50, sizing_mode=\"fixed\", align=\"center\"\n",
+    ")\n",
     "p1"
    ]
   },
@@ -1428,8 +1430,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p2 = pn.pane.PNG(\"https://image.flaticon.com/icons/png/512/505/505026.png\", \n",
-    "                 height=50, sizing_mode=\"fixed\", align=\"center\")\n",
+    "p2 = pn.pane.PNG(\n",
+    "    \"https://cdn-icons-png.flaticon.com/512/2111/2111283.png\",\n",
+    "    height=50, sizing_mode=\"fixed\", align=\"center\"\n",
+    ")\n",
     "p2"
    ]
   },
@@ -1489,7 +1493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "title = pn.Row(header, pn.Spacer(), p1, p2, background=\"#d8dee9\", sizing_mode='fixed', width=1050, height=70)\n",
+    "title = pn.Row(header, pn.Spacer(), p1, p2, styles={'background': '#d8dee9'}, sizing_mode='fixed', width=1050, height=70)\n",
     "title"
    ]
   },
@@ -1718,7 +1722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "title = pn.Row(header, pn.Spacer(), p1, p2, background=\"#d8dee9\", sizing_mode='fixed', width=1050, height=70)\n",
+    "title = pn.Row(header, pn.Spacer(), p1, p2, styles={'background': '#d8dee9'}, sizing_mode='fixed', width=1050, height=70)\n",
     "title"
    ]
   },
@@ -1763,8 +1767,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dashboard = pn.Column(title, r1, r2, r3, sizing_mode='fixed', background='#4c566a',\n",
-    "                        align='center', height=800, width=1050)"
+    "dashboard = pn.Column(\n",
+    "    title, r1, r2, r3, sizing_mode='fixed', styles={'background': '#4c566a'}, \n",
+    "    align='center', height=800, width=1050\n",
+    ")"
    ]
   },
   {
@@ -1864,7 +1870,7 @@
     "theme = Theme(\n",
     "    json={\n",
     "    'attrs' : {\n",
-    "        'Figure' : {\n",
+    "        'figure' : {\n",
     "            'background_fill_color': '#4c566a',\n",
     "            'border_fill_color': '#4c566a',\n",
     "            'outline_line_color': '#4c566a',\n",
@@ -1945,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "southwest-corporation",
    "metadata": {},
    "outputs": [],
@@ -1974,7 +1980,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1988,7 +1994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
